# Artemis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
artemis_vlm/: __init__.py  configuration_artemis_vlm.py  data_collator.py  losses.py  modeling_artemis_vlm.py  processing_artemis_vlm.py
tests/: test_artemis_collator.py  test_artemis_processor.py  test_artemis_stage_gen.py  test_artemis_vlm.py  test_generate_image_injection.py
